gpu scheduler: Optimize priorities for circular stream waits.

This changes streams to only propagate inherited prioirities to
already existing wait fences.

New wait fences initially inherit the default priority of the waiter.
If the waiter gets a priority bump, that priority is propagated to
existing wait fences at that time.

BUG=786820

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Iab04f21985e69aba7f3b90b7ffe2545d3c8510e6